[OPENENGSB-2238] Increase maxmem and permspace for integration test engines